# COMP4981Ass2

./: CMakeLists.txt  README.md  bit-masking.c  bit-masking.h  bit_masking.c  bit_masking.h  decode-checksum.c  decode-crc32.c  decode-parity.c  encode-checksum.c  encode-crc32.c  encode-parity.c
